<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.practicas.janhout.actividadesinstituto.NuevaActividad">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RadioGroup
            android:id="@+id/grupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbComplementaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="cambioActividad"
                android:text="@string/complementaria" />

            <RadioButton
                android:id="@+id/rbExtra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="cambioActividad"
                android:text="@string/extra" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinnerProfesor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/grupo" />

        <Spinner
            android:id="@+id/spinnerGrupo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerProfesor" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerGrupo"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:ems="10"
            android:hint="@string/descripcion" />

        <FrameLayout
            android:id="@+id/actividades"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/etDescripcion"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/layoutComplementaria"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/botonFechaActividad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="dialogoFecha"
                    android:text="@string/fecha_actividad" />

                <Spinner
                    android:id="@+id/spinnerLugar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/desde" />

                    <Button
                        android:id="@+id/botonHoraInicio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="dialogoHora"
                        android:text="@string/hora_inicio" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/hasta" />

                    <Button
                        android:id="@+id/botonHoraFinal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="dialogoHora"
                        android:text="@string/hora_final" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutExtra"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desde" />

                    <Button
                        android:id="@+id/botonFechaSalida"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="dialogoFecha"
                        android:text="@string/fecha_salida" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hasta" />

                    <Button
                        android:id="@+id/botonFechaLlegada"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="dialogoFecha"
                        android:text="@string/fecha_llegada" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desde"/>

                    <Button
                        android:id="@+id/botonHoraSalida"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="dialogoHora"
                        android:text="@string/hora_salida" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hasta"/>

                    <Button
                        android:id="@+id/botonHoraLlegada"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="dialogoHora"
                        android:text="@string/hora_llegada" />
                </LinearLayout>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lugar_salida"
                    android:id="@+id/etSalida"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lugar_llegada"
                    android:id="@+id/etLlegada"/>

            </LinearLayout>
        </FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actividades"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:onClick="devolverActividad"
            android:text="@android:string/ok" />
    </RelativeLayout>
</ScrollView>